# ai-job-aggregator

./: CONTRIBUTING.md  ConvFM_Training.ipynb  ResumePaperserO.ipynb  Untitled40 (1).ipynb  ai_recommendation_model_integrated.ipynb  api_server.py  convfm_model.py  env.example  feature_extractor.py  pyproject.toml  requirements.txt  scraped_jobs.json  test_api.py  test_scraper.py  train_convfm.py  training_pipeline.py
JobSpy/: jobs.csv  jobs_full_descriptions.csv  pyproject.toml  run_scraper.py
JobSpy/jobspy_env/: pyvenv.cfg
JobSpy/jobspy_env/Scripts/: activate  activate.bat
Job_Aggregator/: .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  README.md  api_server.py  complete_example.py  docker-compose.yml  jobs_output.csv  recommendation_api.py  requirements.txt  test_full_descriptions.py  test_scraper.py
Job_Aggregator/api/: recommendation_api.py
Job_Aggregator/artifacts/: .gitkeep  convfm_model_20251011_020742_history.json
Job_Aggregator/data/: .gitkeep
Job_Aggregator/docs/: API_DOCUMENTATION.md
Job_Aggregator/jobspy/linkedin/: __init__.py
Job_Aggregator/logs/: .gitkeep
Job_Aggregator/ml_models/: __init__.py  training_pipeline.py
Job_Aggregator/models/: convfm_model_20251011_020742.pt
Job_Aggregator/recommendation_model.model/: predict.py  train.py
Job_Aggregator/scripts/: train_convfm.py
Job_Aggregator/tests/: test_api.py  test_convfm_model.py
api/: __init__.py
artifacts/: convfm_model_20251011_020742_config.json  convfm_model_20251011_020742_extractor.pkl
docs/: CONVFM_README.md
examples/: advanced_usage.py  basic_usage.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/components/: SearchBar.tsx
frontend/src/contexts/: AuthContext.tsx  SearchContext.tsx
frontend/src/pages/: JobDetail.tsx  Search.tsx
jobspy-env/: pyvenv.cfg
jobspy-env/Scripts/: activate  activate.bat
ml_models/: README.md  __init__.py  convfm_model.py  feature_extractor.py  training_pipeline.py
models/: .gitkeep  best_convfm_model.pt
recommendation_model.model/: __init__.py  preprocess.py
scripts/: complete_example.py  test_recommendations.py
tests/: __init__.py  test_feature_extractor.py
(+4 files in other folders)
